# conway_coro

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
conway/: Cargo.toml
conway/.cargo/: config.toml
conway/src/: main.rs  ui.rs
conway/src/old/: main.rs1.txt  main.rs2.txt  ui.rs1.txt
conway/src/prev/: main.rs  main.rs2  main.rs3  main_.rs  main_struct_trait.rs  patterns.rs  ui.rs  ui_.rs
conway_coro_/: Cargo.toml
conway_coro_/src/: main.rs  ui.rs
grid_display/: Cargo.toml
grid_display/.cargo/: xconfig.xtoml
grid_display/src/: main.rs
src/: grid.rs  main.rs  patterns.rs
