[workspace]
members = [
    "conway",
    "conway_coro_", 
    "grid_display",
    "hello_world"
]
resolver = "2"

# Optional: shared dependencies
[workspace.dependencies]
eframe  = "0.24"
egui    = "0.24"
tokio   = { version = "1.0", features = ["full"] }
winapi  = { version = "0.3", features = ["winuser", "windef"] }


